# glucose

./: .gitignore  CMakeLists.txt  README.md
core/: Solver.cc  SolverTypes.h
parallel/: MultiSolvers.cc  MultiSolvers.h  ParallelSolver.cc  ParallelSolver.h  SharedCompanion.cc  SharedCompanion.h
simp/: SimpSolver.cc
tests/: CMakeLists.txt  test.cc  test_parallel.cc
utils/: ParseUtils.h  System.h
